Mensagens do Sistema
Exclusão de conta
Logout realizado
Sessão expirada
Cadastro duplicado
Login inválido
Atualização feita
Login válido
Cadastro concluído
